# crewai_first_project

./: README.md  pyproject.toml
src/crewai_first_project/: main.py
