[project]
name = "crewai_first_project"
version = "0.1.0"
description = "crewai-first-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_first_project.main:kickoff"
run_crew = "crewai_first_project.main:kickoff"
plot = "crewai_first_project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
